# yafowil.widget.image

./: .gitignore  CHANGES.rst  HISTORY.rst  Makefile  README.rst  base.cfg  buildout.cfg  mx.ini  mxmake.yaml  pyproject.toml  rollup.conf.js  setup.cfg  setup.py
.github/workflows/: test_js.yaml  test_py.yaml
js/: karma-coverage.js  rollup.conf.js
js/src/: bundle.js  widget.js
js/src/default/: widget.js
js/tests/: test_image.js
scripts/: coverage.sh  i18n.sh  install.sh  test.sh
scss/: styles.scss
src/yafowil/widget/image/: __init__.py  configure.zcml  example.py  tests.py  utils.py  utils.rst  widget.py  widget.rst  yafowil.widget.image.js  yafowil.widget.image.js.map  yafowil.widget.image.min.js  yafowil.widget.image.min.js.map
src/yafowil/widget/image/locales/: yafowil.widget.image.pot
src/yafowil/widget/image/locales/de/LC_MESSAGES/: yafowil.widget.image.mo  yafowil.widget.image.po
src/yafowil/widget/image/locales/en/LC_MESSAGES/: yafowil.widget.image.mo  yafowil.widget.image.po
src/yafowil/widget/image/resources/: widget.css  widget.js  widget.js.map  widget.min.js  widget.min.js.map
src/yafowil/widget/image/resources/default/: widget.js
src/yafowil/widget/image/tests/: test_widget.py
